feat: to determine the ocr engine used